--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="o-section o-section--lg">
                 <div class="o-layout">
                     <div class="o-layout__item u-1-of-2-bp3">
-                        <h1>
+                        <h1 class="c-lead c-lead--xxl u-color-primary-base">
                             Cancer is smart. <br>
                             Together, we can <br>
                             be smarter.
@@ -77,7 +77,7 @@
                     </div>
                     <div class="o-layout__item u-1-of-2-bp3">
                         <div class="u-max-width-sm">
-                            <p>
+                            <p class="c-lead--lg">
                                 Accelerating the fight against cancer requires the entire industry to work together. Our
                                 products
                                 connect community oncologists, academics, hospitals, life science researchers and
@@ -107,18 +107,18 @@
                     </figure>
                     <div class="o-layout__item u-1-of-2-bp3 ">
                         <header>
-                            <h2>
+                            <h2 class="c-lead c-lead--xxl">
                                 For Community <br>
                                 Oncology
                             </h2>                       
                         </header>
-                        <p>
+                        <p class= "c-lead c-lead--lg">
                             OncoCloud is the most comprehensive suite of software and services in community oncology. Using our
                             technology, community clinics are providing better care for patients while remaining efficient,
                             independent and financially successful.
                         </p>
                         <p>
-                            <a href="#!">Learn more</a>
+                            <a class="c-link-cta" href="#!">Learn more</a>
                         </p>
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                                     and generate evidence.
                                 </p>
                                 <p>
-                                    <a href="#!">Learn more</a>
+                                    <a class="c-link-cta" href="#!">Learn more</a>
                                 </p>
                         </div>
                 </div>
@@ -176,7 +176,7 @@
                             and beyond the walls of their institution.
                         </p>
                         <p>
-                            <a href="#!">Learn more</a>
+                            <a class="c-link-cta" href="#!">Learn more</a>
                         </p>
                     </div>
                 </div>
@@ -184,40 +184,45 @@
         </div>
     </section>
     <section class="o-row o-row--lg">
-        <div class="o-container">
+        <div class="o-container u-max-width-md">
             <header>
-                <h2>
+                <h2 class="c-lead c-lead--xxxl u-color-primary-base">
                     Do well by doing good. Join the leading tech company in the fight against cancer.
                 </h2>
             </header>
-            <p>
-                <a href="#!">Our story</a>
-            </p>
-            <p>
-                <a href="#!">Our values</a>
-            </p>
-            <p>
-                <a href="#!">Join our team</a>
-            </p>
+            <div class="o-layout .o-list-reset c-nav__list">
+                <p class="u-color-primary-dark">
+                    <a class="c-link-cta" href="#!">Our story</a>
+                </p>
+                <p>
+                    <a class="c-link-cta" href="#!">Our values</a>
+                </p>
+                <p>
+                    <a class="c-link-cta" href="#!">Join our team</a>
+                </p>
+            </div>            
         </div>
-        <div class="o-container">
+        <div class="o-container o-row--md">
             <figure>
                 <img src="img/jpg/img-4.jpg" alt="Dr. James Hamrick & Sarika Vora in their weekly team stand-up">
             </figure>
         </div>
         <div class="o-container">
-            <h3>
-                Life at Flatiron
-            </h3>
-
-            <p>
-                The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re
-                passionate about having an impact on accelerating cancer research and improving patient care, we’d love
-                to hear from you.
-            </p>
-            <p>
-                <a href="#!">Open positions</a>
-            </p>
+            <div class="o-layout o-layout--justify-space-between">
+                <h3>
+                    Life at Flatiron
+                </h3>
+                <div class="o-layout__item u-1-of-2-bp3">
+                    <p>
+                        The talent and dedication of the people working at Flatiron makes everything we do possible. If you’re
+                        passionate about having an impact on accelerating cancer research and improving patient care, we’d love
+                        to hear from you.
+                    </p>
+                    <p>
+                        <a class="c-link-cta" href="#!">Open positions</a>
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <section class="o-row o-row--lg">
