added new row modifier & cta-link modifier

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </div>
         </div>
     </section>
-    <section class="o-row o-row--lg">
+    <section class="o-row o-row--lg o-row—gradient c-lead">
         <div class="o-container">
             <div class="u-max-width-xs">
                 <h2>
@@ -236,7 +236,7 @@
                     elit.
                 </p>
                 <p>
-                    <a href="#!">Sign me up</a>
+                    <a class="c-link-cta c-link-cta--inverse" href="#!">Sign me up</a>
                 </p>
             </div>
         </div>
